edu _attainment table and csv created

--- a/states_data.ipynb
+++ b/states_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,12 +49,12 @@
    "source": [
     "# Setup splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path, headless=False) # headless=True hides the chrome window pop-up"
+    "browser = Browser('chrome', **executable_path, headless=True) # headless=True hides the chrome window pop-up"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -85,7 +80,7 @@
        "<table class=\"jsx-1487038798 table table-striped tp-table-body\"><thead class=\"jsx-2642336383\" style=\"font-weight: bold;\"><tr class=\"jsx-2642336383\"><th class=\"jsx-2816426159\"><span class=\"jsx-2816426159\"><a class=\"jsx-2816426159\" data-field=\"State\" style=\"color: black; cursor: pointer; display: inline-block;\">State  </a></span></th><th class=\"jsx-2816426159\"><span class=\"jsx-2816426159\"><a class=\"jsx-2816426159\" data-field=\"totalRegistered\" style=\"color: black; cursor: pointer; display: inline-block;\">Number of Registered Voters  </a></span></th><th class=\"jsx-2816426159\"><span class=\"jsx-2816426159\"><a class=\"jsx-2816426159\" data-field=\"Pop\" style=\"color: black; cursor: pointer; display: inline-block;\">2021 Pop.  </a></span></th><th class=\"jsx-2816426159\"><span class=\"jsx-2816426159\"><a class=\"jsx-2816426159\" data-field=\"registeredPerc\" style=\"color: black; cursor: pointer; display: inline-block;\">% Registered  </a></span></th><th class=\"jsx-2816426159\"><span class=\"jsx-2816426159\"><a class=\"jsx-2816426159\" data-field=\"asOf\" style=\"color: black; cursor: pointer; display: inline-block; padding-right: 12px;\">As Of  </a></span></th></tr></thead><tbody class=\"jsx-2642336383\"><tr><td><a href=\"/states/alabama-population\">Alabama</a></td><td>3,708,804</td><td>4,934,190</td><td>75.17%</td><td>11/4/2020</td></tr><tr><td><a href=\"/states/alaska-population\">Alaska</a></td><td>597,319</td><td>724,357</td><td>82.46%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/arizona-population\">Arizona</a></td><td>4,281,152</td><td>7,520,100</td><td>56.93%</td><td>11/4/2020</td></tr><tr><td><a href=\"/states/arkansas-population\">Arkansas</a></td><td>1,755,775</td><td>3,033,950</td><td>57.87%</td><td>6/3/2020</td></tr><tr><td><a href=\"/states/california-population\">California</a></td><td>22,047,448</td><td>39,613,500</td><td>55.66%</td><td>10/19/2020</td></tr><tr><td><a href=\"/states/colorado-population\">Colorado</a></td><td>4,238,513</td><td>5,893,630</td><td>71.92%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/connecticut-population\">Connecticut</a></td><td>2,375,537</td><td>3,552,820</td><td>66.86%</td><td>10/29/2019</td></tr><tr><td><a href=\"/states/delaware-population\">Delaware</a></td><td>738,563</td><td>990,334</td><td>74.58%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/florida-population\">Florida</a></td><td>14,065,627</td><td>21,944,600</td><td>64.10%</td><td>8/31/2020</td></tr><tr><td><a href=\"/states/georgia-population\">Georgia</a></td><td>7,233,584</td><td>10,830,000</td><td>66.79%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/hawaii-population\">Hawaii</a></td><td>830,000</td><td>1,406,430</td><td>59.01%</td><td>10/29/2020</td></tr><tr><td><a href=\"/states/idaho-population\">Idaho</a></td><td>1,010,984</td><td>1,860,120</td><td>54.35%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/illinois-population\">Illinois</a></td><td>8,036,534</td><td>12,569,300</td><td>63.94%</td><td>3/17/2020</td></tr><tr><td><a href=\"/states/indiana-population\">Indiana</a></td><td>4,585,024</td><td>6,805,660</td><td>67.37%</td><td>6/2/2020</td></tr><tr><td><a href=\"/states/iowa-population\">Iowa</a></td><td>2,245,096</td><td>3,167,970</td><td>70.87%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/kansas-population\">Kansas</a></td><td>1,851,397</td><td>2,917,220</td><td>63.46%</td><td>7/1/2020</td></tr><tr><td><a href=\"/states/kentucky-population\">Kentucky</a></td><td>3,565,428</td><td>4,480,710</td><td>79.57%</td><td>10/10/2020</td></tr><tr><td><a href=\"/states/louisiana-population\">Louisiana</a></td><td>3,091,340</td><td>4,627,000</td><td>66.81%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/maine-population\">Maine</a></td><td>1,063,383</td><td>1,354,520</td><td>78.51%</td><td>8/3/2020</td></tr><tr><td><a href=\"/states/maryland-population\">Maryland</a></td><td>4,141,498</td><td>6,065,440</td><td>68.28%</td><td>10/13/2020</td></tr><tr><td><a href=\"/states/massachusetts-population\">Massachusetts</a></td><td>4,812,909</td><td>6,912,240</td><td>69.63%</td><td>10/24/2020</td></tr><tr><td><a href=\"/states/michigan-population\">Michigan</a></td><td>8,127,040</td><td>9,992,430</td><td>81.33%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/minnesota-population\">Minnesota</a></td><td>3,588,563</td><td>5,706,400</td><td>62.89%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/mississippi-population\">Mississippi</a></td><td>1,985,928</td><td>2,966,410</td><td>66.95%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/missouri-population\">Missouri</a></td><td>4,213,092</td><td>6,169,040</td><td>68.29%</td><td>11/1/2018</td></tr><tr><td><a href=\"/states/montana-population\">Montana</a></td><td>696,292</td><td>1,085,000</td><td>64.17%</td><td>3/1/2020</td></tr><tr><td><a href=\"/states/nebraska-population\">Nebraska</a></td><td>1,252,089</td><td>1,952,000</td><td>64.14%</td><td>10/1/2020</td></tr><tr><td><a href=\"/states/nevada-population\">Nevada</a></td><td>1,821,356</td><td>3,185,790</td><td>57.17%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/new-hampshire-population\">New Hampshire</a></td><td>998,537</td><td>1,372,200</td><td>72.77%</td><td>10/21/2020</td></tr><tr><td><a href=\"/states/new-jersey-population\">New Jersey</a></td><td>6,486,299</td><td>8,874,520</td><td>73.09%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/new-mexico-population\">New Mexico</a></td><td>1,350,181</td><td>2,105,000</td><td>64.14%</td><td>10/30/2020</td></tr><tr><td><a href=\"/states/new-york-population\">New York</a></td><td>13,555,547</td><td>19,300,000</td><td>70.24%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/north-carolina-population\">North Carolina</a></td><td>7,361,219</td><td>10,701,000</td><td>68.79%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/north-dakota-population\">North Dakota</a></td><td>581,379</td><td>770,026</td><td>75.50%</td><td>3/1/2020</td></tr><tr><td><a href=\"/states/ohio-population\">Ohio</a></td><td>7,774,767</td><td>11,714,600</td><td>66.37%</td><td>3/17/2020</td></tr><tr><td><a href=\"/states/oklahoma-population\">Oklahoma</a></td><td>2,259,113</td><td>3,990,440</td><td>56.61%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/oregon-population\">Oregon</a></td><td>2,924,292</td><td>4,289,440</td><td>68.17%</td><td>10/7/2020</td></tr><tr><td><a href=\"/states/pennsylvania-population\">Pennsylvania</a></td><td>9,091,371</td><td>12,804,100</td><td>71.00%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/rhode-island-population\">Rhode Island</a></td><td>809,821</td><td>1,061,510</td><td>76.29%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/south-carolina-population\">South Carolina</a></td><td>3,513,225</td><td>5,277,830</td><td>66.57%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/south-dakota-population\">South Dakota</a></td><td>578,666</td><td>896,581</td><td>64.54%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/tennessee-population\">Tennessee</a></td><td>3,931,248</td><td>6,944,260</td><td>56.61%</td><td>6/1/2020</td></tr><tr><td><a href=\"/states/texas-population\">Texas</a></td><td>16,211,198</td><td>29,730,300</td><td>54.53%</td><td>3/1/2020</td></tr><tr><td><a href=\"/states/utah-population\">Utah</a></td><td>1,857,861</td><td>3,310,770</td><td>56.12%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/vermont-population\">Vermont</a></td><td>495,267</td><td>623,251</td><td>79.47%</td><td>9/1/2020</td></tr><tr><td><a href=\"/states/virginia-population\">Virginia</a></td><td>5,975,696</td><td>8,603,980</td><td>69.45%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/washington-population\">Washington</a></td><td>4,861,482</td><td>7,796,940</td><td>62.35%</td><td>10/27/2020</td></tr><tr><td><a href=\"/states/west-virginia-population\">West Virginia</a></td><td>1,268,460</td><td>1,767,860</td><td>71.75%</td><td>10/13/2020</td></tr><tr><td><a href=\"/states/wisconsin-population\">Wisconsin</a></td><td>3,684,726</td><td>5,852,490</td><td>62.96%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/wyoming-population\">Wyoming</a></td><td>268,837</td><td>581,075</td><td>46.27%</td><td>11/3/2020</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,13 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -112,7 +102,7 @@
        "<tbody class=\"jsx-2642336383\"><tr><td><a href=\"/states/alabama-population\">Alabama</a></td><td>3,708,804</td><td>4,934,190</td><td>75.17%</td><td>11/4/2020</td></tr><tr><td><a href=\"/states/alaska-population\">Alaska</a></td><td>597,319</td><td>724,357</td><td>82.46%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/arizona-population\">Arizona</a></td><td>4,281,152</td><td>7,520,100</td><td>56.93%</td><td>11/4/2020</td></tr><tr><td><a href=\"/states/arkansas-population\">Arkansas</a></td><td>1,755,775</td><td>3,033,950</td><td>57.87%</td><td>6/3/2020</td></tr><tr><td><a href=\"/states/california-population\">California</a></td><td>22,047,448</td><td>39,613,500</td><td>55.66%</td><td>10/19/2020</td></tr><tr><td><a href=\"/states/colorado-population\">Colorado</a></td><td>4,238,513</td><td>5,893,630</td><td>71.92%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/connecticut-population\">Connecticut</a></td><td>2,375,537</td><td>3,552,820</td><td>66.86%</td><td>10/29/2019</td></tr><tr><td><a href=\"/states/delaware-population\">Delaware</a></td><td>738,563</td><td>990,334</td><td>74.58%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/florida-population\">Florida</a></td><td>14,065,627</td><td>21,944,600</td><td>64.10%</td><td>8/31/2020</td></tr><tr><td><a href=\"/states/georgia-population\">Georgia</a></td><td>7,233,584</td><td>10,830,000</td><td>66.79%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/hawaii-population\">Hawaii</a></td><td>830,000</td><td>1,406,430</td><td>59.01%</td><td>10/29/2020</td></tr><tr><td><a href=\"/states/idaho-population\">Idaho</a></td><td>1,010,984</td><td>1,860,120</td><td>54.35%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/illinois-population\">Illinois</a></td><td>8,036,534</td><td>12,569,300</td><td>63.94%</td><td>3/17/2020</td></tr><tr><td><a href=\"/states/indiana-population\">Indiana</a></td><td>4,585,024</td><td>6,805,660</td><td>67.37%</td><td>6/2/2020</td></tr><tr><td><a href=\"/states/iowa-population\">Iowa</a></td><td>2,245,096</td><td>3,167,970</td><td>70.87%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/kansas-population\">Kansas</a></td><td>1,851,397</td><td>2,917,220</td><td>63.46%</td><td>7/1/2020</td></tr><tr><td><a href=\"/states/kentucky-population\">Kentucky</a></td><td>3,565,428</td><td>4,480,710</td><td>79.57%</td><td>10/10/2020</td></tr><tr><td><a href=\"/states/louisiana-population\">Louisiana</a></td><td>3,091,340</td><td>4,627,000</td><td>66.81%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/maine-population\">Maine</a></td><td>1,063,383</td><td>1,354,520</td><td>78.51%</td><td>8/3/2020</td></tr><tr><td><a href=\"/states/maryland-population\">Maryland</a></td><td>4,141,498</td><td>6,065,440</td><td>68.28%</td><td>10/13/2020</td></tr><tr><td><a href=\"/states/massachusetts-population\">Massachusetts</a></td><td>4,812,909</td><td>6,912,240</td><td>69.63%</td><td>10/24/2020</td></tr><tr><td><a href=\"/states/michigan-population\">Michigan</a></td><td>8,127,040</td><td>9,992,430</td><td>81.33%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/minnesota-population\">Minnesota</a></td><td>3,588,563</td><td>5,706,400</td><td>62.89%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/mississippi-population\">Mississippi</a></td><td>1,985,928</td><td>2,966,410</td><td>66.95%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/missouri-population\">Missouri</a></td><td>4,213,092</td><td>6,169,040</td><td>68.29%</td><td>11/1/2018</td></tr><tr><td><a href=\"/states/montana-population\">Montana</a></td><td>696,292</td><td>1,085,000</td><td>64.17%</td><td>3/1/2020</td></tr><tr><td><a href=\"/states/nebraska-population\">Nebraska</a></td><td>1,252,089</td><td>1,952,000</td><td>64.14%</td><td>10/1/2020</td></tr><tr><td><a href=\"/states/nevada-population\">Nevada</a></td><td>1,821,356</td><td>3,185,790</td><td>57.17%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/new-hampshire-population\">New Hampshire</a></td><td>998,537</td><td>1,372,200</td><td>72.77%</td><td>10/21/2020</td></tr><tr><td><a href=\"/states/new-jersey-population\">New Jersey</a></td><td>6,486,299</td><td>8,874,520</td><td>73.09%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/new-mexico-population\">New Mexico</a></td><td>1,350,181</td><td>2,105,000</td><td>64.14%</td><td>10/30/2020</td></tr><tr><td><a href=\"/states/new-york-population\">New York</a></td><td>13,555,547</td><td>19,300,000</td><td>70.24%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/north-carolina-population\">North Carolina</a></td><td>7,361,219</td><td>10,701,000</td><td>68.79%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/north-dakota-population\">North Dakota</a></td><td>581,379</td><td>770,026</td><td>75.50%</td><td>3/1/2020</td></tr><tr><td><a href=\"/states/ohio-population\">Ohio</a></td><td>7,774,767</td><td>11,714,600</td><td>66.37%</td><td>3/17/2020</td></tr><tr><td><a href=\"/states/oklahoma-population\">Oklahoma</a></td><td>2,259,113</td><td>3,990,440</td><td>56.61%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/oregon-population\">Oregon</a></td><td>2,924,292</td><td>4,289,440</td><td>68.17%</td><td>10/7/2020</td></tr><tr><td><a href=\"/states/pennsylvania-population\">Pennsylvania</a></td><td>9,091,371</td><td>12,804,100</td><td>71.00%</td><td>11/2/2020</td></tr><tr><td><a href=\"/states/rhode-island-population\">Rhode Island</a></td><td>809,821</td><td>1,061,510</td><td>76.29%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/south-carolina-population\">South Carolina</a></td><td>3,513,225</td><td>5,277,830</td><td>66.57%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/south-dakota-population\">South Dakota</a></td><td>578,666</td><td>896,581</td><td>64.54%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/tennessee-population\">Tennessee</a></td><td>3,931,248</td><td>6,944,260</td><td>56.61%</td><td>6/1/2020</td></tr><tr><td><a href=\"/states/texas-population\">Texas</a></td><td>16,211,198</td><td>29,730,300</td><td>54.53%</td><td>3/1/2020</td></tr><tr><td><a href=\"/states/utah-population\">Utah</a></td><td>1,857,861</td><td>3,310,770</td><td>56.12%</td><td>11/3/2020</td></tr><tr><td><a href=\"/states/vermont-population\">Vermont</a></td><td>495,267</td><td>623,251</td><td>79.47%</td><td>9/1/2020</td></tr><tr><td><a href=\"/states/virginia-population\">Virginia</a></td><td>5,975,696</td><td>8,603,980</td><td>69.45%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/washington-population\">Washington</a></td><td>4,861,482</td><td>7,796,940</td><td>62.35%</td><td>10/27/2020</td></tr><tr><td><a href=\"/states/west-virginia-population\">West Virginia</a></td><td>1,268,460</td><td>1,767,860</td><td>71.75%</td><td>10/13/2020</td></tr><tr><td><a href=\"/states/wisconsin-population\">Wisconsin</a></td><td>3,684,726</td><td>5,852,490</td><td>62.96%</td><td>11/1/2020</td></tr><tr><td><a href=\"/states/wyoming-population\">Wyoming</a></td><td>268,837</td><td>581,075</td><td>46.27%</td><td>11/3/2020</td></tr></tbody>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +131,7 @@
        "<tr><td><a href=\"/states/alabama-population\">Alabama</a></td><td>3,708,804</td><td>4,934,190</td><td>75.17%</td><td>11/4/2020</td></tr>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +153,7 @@
        "'/states/alabama-population'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +174,7 @@
        "'4,934,190'"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +195,7 @@
        "'Alabama'"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +294,7 @@
        "4       39,613,500  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +465,7 @@
        "[350 rows x 4 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,13 +487,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save the Education Attainment to a CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "education_attainment_df.to_csv('education_attainment.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# education_attainment_df.to_csv('')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
