"fixed database tables and completed SQL schema

--- a/world_o_meters_data_clean.ipynb
+++ b/world_o_meters_data_clean.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "optical-monroe",
+   "id": "demographic-product",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "heard-implementation",
+   "id": "editorial-first",
    "metadata": {},
    "outputs": [
     {
@@ -278,19 +278,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "governing-drunk",
+   "id": "intermediate-discussion",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop rows which are totals or non-state/territories e.g. Grand Princess Ship\n",
-    "clean_df.drop(clean_df[(clean_df[\"USAState\"]==\"Total:\") | (clean_df[\"USAState\"]==\"USA Total\") | (clean_df[\"USAState\"]==\"Federal Prisons\") | (clean_df[\"USAState\"]==\"Navajo Nation\") | (clean_df[\"USAState\"]==\"Grand Princess Ship\")| (clean_df[\"USAState\"]==\"Wuhan Repatriated\")| (clean_df[\"USAState\"]==\"Diamond Princess Ship\")| (clean_df[\"USAState\"]==\"Veteran Affairs\")| (clean_df[\"USAState\"]==\"US Military\")].index, inplace=True)\n",
+    "clean_df.drop(clean_df[(clean_df[\"USAState\"]==\"Total:\") | (clean_df[\"USAState\"]==\"USA Total\") | (clean_df[\"USAState\"]==\"Federal Prisons\") | (clean_df[\"USAState\"]==\"Navajo Nation\") | (clean_df[\"USAState\"]==\"Grand Princess Ship\")| (clean_df[\"USAState\"]==\"Wuhan Repatriated\")| (clean_df[\"USAState\"]==\"Diamond Princess Ship\")| (clean_df[\"USAState\"]==\"Veteran Affairs\")| (clean_df[\"USAState\"]==\"US Military\")| (clean_df[\"USAState\"]==\"Guam\")| (clean_df[\"USAState\"]==\"American Samoa\")].index, inplace=True)\n",
     "clean_df.rename(columns = {\"USAState\": \"state_name\",\"Population\": \"state_population\"},inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "inside-promise",
+   "id": "valid-sydney",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "asian-shark",
+   "id": "inside-group",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "freelance-terry",
+   "id": "incomplete-traveler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "plain-chile",
+   "id": "negative-transcript",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "signal-kuwait",
+   "id": "ongoing-preview",
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "legendary-champion",
+   "id": "governing-netherlands",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noble-airport",
+   "id": "romantic-reset",
    "metadata": {},
    "outputs": [],
    "source": []
